completed optimization for header,section one video and videobackground. Need to figure out z-index issue

--- a/styles/Videoplayer.css
+++ b/styles/Videoplayer.css
@@ -4,26 +4,21 @@
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.7);
 }
 iframe{
+    box-sizing: border-box;
     object-fit:cover;
     margin-bottom: auto;
     margin-left: auto;
     margin-right:auto;
-    width: 67.5%;
-    height: 71%;
-    padding:0rem;
-    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    padding:9.6% 17.3% 9.5%;
+    position: relative;
     overflow:hidden;
-    z-index: 1;
+    z-index: 3;
 }
-@media screen 
-and (max-width:600px)
-{
-    iframe{
-        height: 75%;
-        width:70%;
-    }
 
-}
 
 /*position:absolute;
     border-radius:0.25em;
